# platform.upstream.ecryptfs-utils

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  project.config
doc/: Makefile.in
doc/manpage/: Makefile.in  ecryptfs.7
packaging/: ecryptfs-utils.changes  ecryptfs-utils.spec
src/: Makefile.in
src/daemon/: Makefile.in  main.c
src/desktop/: Makefile.am  Makefile.in
src/include/: Makefile.in
src/key_mod/: Makefile.in
src/libecryptfs/: Makefile.in  cmd_ln_parser.c  key_management.c  key_mod.c  main.c
src/libecryptfs-swig/: Makefile.in
src/pam_ecryptfs/: Makefile.in  pam_ecryptfs.c
src/utils/: Makefile.in  mount.ecryptfs.c  mount.ecryptfs_private.c
tests/: Makefile.in
tests/kernel/: Makefile.in
tests/kernel/lp-509180/: test.c
tests/lib/: Makefile.in
tests/userspace/: Makefile.am  Makefile.in  tests.rc
tests/userspace/wrap-unwrap/: test.c
